--- a/_config.yml
+++ b/_config.yml
@@ -6,32 +6,32 @@ favicon: images/favicon.ico
 version: 2
 
 # Personal info
-name: Brett Harris
-title: Senior Network System Administrator
-email: brett.h@email.co.uk
-website: www.github.com/sproogen/resume-theme
+name: Donald Kim
+title: Data Architect | Educator | Minister
+email: dhk@donaldhkim.com
+website: donaldhkim.com
 
 # Dark Mode (true/false/never)
 darkmode: false
 
 # Social links
-twitter_username: facespics
-github_username:  sproogen
+twitter_username: donaldhkim
+github_username:  donaldhkim
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
-# facebook_username: jekyll
+facebook_username: dhk26
 # flickr_username: jekyll
-instagram_username: jameswgrant
-linkedin_username: jameswgrant
+instagram_username: donaldhkim
+linkedin_username: donaldhkim
 # xing_username: jekyll
 # pinterest_username: jekyll
-youtube_username: globalmtb
+youtube_username: donaldkim
 # googleplus_username: +jekyll
 # orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
-additional_links:
-- title: itsgoingto.be
+# additional_links:
+# - title: itsgoingto.be
   icon: fas fa-globe
   url: https://www.itsgoingto.be
 # - title: another link
@@ -46,12 +46,10 @@ additional_links:
 
 # About Section
 # about_title: About Me
-about_profile_image: images/profile.jpg
+about_profile_image: donaldkim_web.JPG
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
-
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
-
+  Data Engineering | Data Analytics | Bible | Theology
+  
 content:
   - title: Projects # Title for the section
     layout: list # Type of content section (list/text)
